--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,7 +1,7 @@
 <div class="col-md-12">
   <div class="group">
     <%= link_to("New group", new_group_path, class: "btn btn-primary pull-right")%>
-     
+
   </div>
 
 <table class="table table-hover">
@@ -18,7 +18,7 @@
     <tr>
      <td>#</td>
      <td><%= link_to(group.title, group_path(group))%></td>
-     <td><%= group.description %></td>
+     <td><%= render_group_description(group) %></td>
      <td><%= group.user.email %></td>
      <td>
        <% if current_user&&current_user == group.user%>
